chore: forgot to change the name internally to match project.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "version": "0.0.2",
-  "name": "graphql-subverse-list",
+  "name": "graphql-subverse-data",
   "description": "",
   "main": "index.js",
   "type": "module",
